--- a/src/components/Clue/style.css
+++ b/src/components/Clue/style.css
@@ -2,21 +2,30 @@
 	position: relative;
 	display: flex;
 	justify-content: center;
+	align-items: center;
 	flex: 1;
+	padding: 0 50px 50px 50px;
 }
 
-.clue-image {
-
-}
-
+.clue-image,
 .clue-video {
-
+	min-height: 100%;
+	height: 100%;
+	max-height: 100%;
 }
 
 .clue-audio {
-
+	background: url('../../../public/images/note.png') no-repeat;
+	width: 512px;
+	height: 512px;
 }
 
 .clue-text {
-
+	color: white;
+	font-family: Roboto, sans-serif;
+	font-weight: 500;
+	font-size: 80px;
+	text-align: center;
+	margin: 0;
+	align-self: baseline;
 }
