--- a/src/components/Clue/style.css
+++ b/src/components/Clue/style.css
@@ -9,9 +9,11 @@
 
 .clue-image,
 .clue-video {
-	min-height: 100%;
-	height: 100%;
+	object-fit: contain;
+	max-width: 100%;
 	max-height: 100%;
+	min-width: 100%;
+	min-height: 100%;
 }
 
 .clue-audio {
