--- a/src/components/Room/style.css
+++ b/src/components/Room/style.css
@@ -1,17 +1,18 @@
-.container {
-	padding: 20px;
+.r-bar {
+	transition:
+		all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms,
+		background-color 2s!important;
 }
-
 .medias {
 	display: flex;
-	height: calc(80vh - 64px);
+	height: calc(85vh - 64px);
 	justify-content: space-between;
 	flex-wrap: wrap;
 }
 
 .content {
 	flex-basis: 50%;
-	height: 50%;
+	height: 33.333%;
 	position: relative;
 }
 
