--- a/src/index.css
+++ b/src/index.css
@@ -2,8 +2,13 @@ body {
 	margin: 0;
 	padding: 0;
 	font-family: sans-serif;
+	overflow: hidden;
 }
 
 * {
 	box-sizing: border-box;
+}
+
+.container {
+	padding: 20px 20px 0 20px;
 }
