--- a/src/components/Room/style.css
+++ b/src/components/Room/style.css
@@ -29,6 +29,14 @@
 }
 
 .r-clear {
+	flex: 2;
+	display: flex;
+	align-items: center;
+	justify-content: flex-start;
+}
+
+.r-volume {
 	flex: 1;
-	margin-top: 12px!important;
+	display: flex;
+	align-items: center;
 }
