--- a/src/components/Display/style.css
+++ b/src/components/Display/style.css
@@ -8,3 +8,14 @@
 	overflow: hidden;
 	background-color: #263238;
 }
+
+.black {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100vw;
+	height: 100vh;
+	background-color: #000000;
+	z-index: 150;
+	overflow: hidden;
+}
