--- a/src/components/Room/style.css
+++ b/src/components/Room/style.css
@@ -1,7 +1,5 @@
 .r-bar {
-	transition:
-		all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms,
-		background-color 2s!important;
+	transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms, background-color 2s !important;
 }
 .medias {
 	display: flex;
@@ -12,8 +10,13 @@
 
 .content {
 	flex-basis: 50%;
-	height: 33.333%;
+	height: 25%;
 	position: relative;
+	border-bottom: #eee solid 1px;
+}
+
+.content.big {
+	height: 50%;
 }
 
 .free-text {
@@ -21,7 +24,7 @@
 }
 
 .input {
-	width: calc(100% - 200px)!important;
+	width: calc(100% - 200px) !important;
 }
 
 .button {
