--- a/src/components/Title/style.css
+++ b/src/components/Title/style.css
@@ -1,9 +1,8 @@
 .title {
-	padding-bottom: .3em;
 	font-size: 1.5em;
 	line-height: 1.4;
 	border-bottom: 1px solid #eee;
 	margin: 0;
 	font-weight: 400;
-	color: rgba(0,0,0,.87);
+	color: rgba(0, 0, 0, 0.87);
 }
