--- a/src/components/Room/style.css
+++ b/src/components/Room/style.css
@@ -1,6 +1,9 @@
 .r-bar {
 	transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms, background-color 2s !important;
 }
+.r-bar > div:first-child {
+	margin-right: 0px !important;
+}
 .medias {
 	display: flex;
 	height: calc(85vh - 64px);
@@ -36,6 +39,13 @@
 	display: flex;
 	align-items: center;
 	justify-content: flex-start;
+}
+.r-clear > div {
+	margin: 0 10px;
+	background-color: rgba(255, 255, 255, 0) !important;
+}
+.r-clear span {
+	padding: 0 5px !important;
 }
 
 .r-volume {
